# SIPLinux

./: .gitignore  CMakeLists.txt  README.md  build.sh
main/libs/alsa/: alsa_linux_mips.sh
main/libs/alsa/arm/lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
main/libs/alsa/arm/lib/pkgconfig/: alsa.pc
main/libs/alsa/arm_ez/lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
main/libs/alsa/arm_ez/lib/pkgconfig/: alsa.pc
main/libs/alsa/mips/lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
main/libs/alsa/mips/lib/pkgconfig/: alsa.pc
main/libs/alsa/mips_gcc540/lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
main/libs/alsa/mips_gcc540/lib/pkgconfig/: alsa.pc
main/libs/alsa/x86_64/lib/: libasound.la  libasound.so.2.0.0  libatopology.la  libatopology.so.2.0.0
main/libs/alsa/x86_64/lib/pkgconfig/: alsa.pc
main/libs/curl/arm/lib/: libcurl.la  libcurl.so.4.8.0
main/libs/curl/arm/lib/pkgconfig/: libcurl.pc
main/libs/curl/arm/share/man/man1/: curl-config.1
main/libs/curl/arm/share/man/man3/: CURLINFO_APPCONNECT_TIME.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_FILETIME.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXY_SSL_VERIFYRESULT.3  CURLINFO_REDIRECT_COUNT.3  CURLINFO_REDIRECT_TIME.3  CURLINFO_REDIRECT_TIME_T.3  CURLINFO_REQUEST_SIZE.3  CURLINFO_RTSP_CLIENT_CSEQ.3  CURLINFO_RTSP_CSEQ_RECV.3  CURLINFO_RTSP_SERVER_CSEQ.3  CURLINFO_RTSP_SESSION_ID.3  CURLINFO_SCHEME.3  CURLINFO_SIZE_DOWNLOAD.3  CURLINFO_SIZE_UPLOAD_T.3  CURLINFO_SPEED_DOWNLOAD_T.3  CURLINFO_SPEED_UPLOAD.3  CURLINFO_SPEED_UPLOAD_T.3  CURLINFO_SSL_ENGINES.3  CURLINFO_TLS_SESSION.3  CURLINFO_TOTAL_TIME.3  CURLINFO_XFER_ID.3  CURLMOPT_CONTENT_LENGTH_PENALTY_SIZE.3  CURLMOPT_MAXCONNECTS.3  CURLMOPT_MAX_HOST_CONNECTIONS.3  CURLMOPT_MAX_TOTAL_CONNECTIONS.3  CURLMOPT_PIPELINING_SERVER_BL.3  CURLMOPT_PUSHDATA.3  CURLMOPT_PUSHFUNCTION.3  (+212 more)
main/libs/curl/arm_ez/lib/: libcurl.la  libcurl.so.4.8.0
main/libs/curl/arm_ez/lib/pkgconfig/: libcurl.pc
main/libs/curl/arm_ez/share/man/man1/: curl.1  mk-ca-bundle.1
main/libs/curl/arm_ez/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_OS_ERRNO.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRIVATE.3  CURLINFO_PROXY_ERROR.3  CURLINFO_QUEUE_TIME_T.3  CURLINFO_REDIRECT_URL.3  CURLINFO_REFERER.3  CURLINFO_RESPONSE_CODE.3  CURLINFO_RETRY_AFTER.3  CURLINFO_SIZE_DOWNLOAD_T.3  CURLINFO_SIZE_UPLOAD.3  CURLINFO_SPEED_DOWNLOAD.3  CURLINFO_SSL_VERIFYRESULT.3  CURLINFO_STARTTRANSFER_TIME.3  CURLINFO_STARTTRANSFER_TIME_T.3  CURLINFO_TLS_SSL_PTR.3  CURLINFO_TOTAL_TIME_T.3  CURLMOPT_CHUNK_LENGTH_PENALTY_SIZE.3  (+203 more)
main/libs/curl/mips/lib/: libcurl.la  libcurl.so.4.8.0
main/libs/curl/mips/lib/pkgconfig/: libcurl.pc
main/libs/curl/mips_gcc540/lib/: libcurl.la  libcurl.so.4.8.0
main/libs/curl/mips_gcc540/lib/pkgconfig/: libcurl.pc
main/libs/curl/mips_gcc540/share/man/man1/: curl-config.1  curl.1  mk-ca-bundle.1
main/libs/curl/mips_gcc540/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  (+470 more)
main/libs/curl_license/arm_ez/include/: curl_license.h
main/libs/openssl/: openssl_linux_mips.sh  openssl_linux_mips_gcc540.sh
main/libs/openssl/arm/lib/: libcrypto.so.1.1  libssl.so.1.1
main/libs/openssl/arm/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
main/libs/openssl/arm_ez/lib/: libcrypto.so.1.1  libssl.so.1.1
main/libs/openssl/arm_ez/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
main/libs/openssl/mips/include/openssl/: configuration.h  opensslv.h
main/libs/openssl/mips/lib/: libssl.so.3
main/libs/openssl/mips/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
main/libs/openssl/mips_gcc540/include/openssl/: configuration.h  opensslconf.h
main/libs/openssl/mips_gcc540/lib/: libcrypto.so.1.0.0  libssl.so.1.0.0  libssl.so.3
main/libs/openssl/mips_gcc540/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
main/libs/openssl/mips_gcc540/man/man1/: CA.pl.1  asn1parse.1  ca.1  ciphers.1  cms.1
main/libs/sip/arm/include/: sip_sdk_media.h
main/libs/sip/arm_ez/include/: sip_sdk_media.h
main/libs/sip/mips/include/: sip_sdk_aec.h
main/libs/sip/mips/sdk/include/: sip_sdk.h
main/src/: main.c  main.cpp
main/src/sip/: SipHandle.cpp  SipHandle.hpp  SipMediaHandle.cpp  SipMediaHandle.hpp  sip_handle.c  sip_handle.h  sip_media_handle.c  sip_media_handle.h
main/src/utils/: AlsaUtils.cpp  AlsaUtils.hpp  CodecHanader.cpp  CodecHanader.hpp  PCMBufferQueue.h  PCMUtils.cpp  PCMUtils.hpp  SimulateCode.cpp  SimulateCode.hpp
main/src/utils/code/: CodecHanader.cpp  CodecHanader.hpp  H264BufferQueue.h
res/: device.json  test.h264
(+865 files in other folders)
